# claude-notes

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conversations.html  emoji-test.cast  pyproject.toml  quick-demo.cast  test-emoji-fallback.cast  test-markers.cast
.github/workflows/: ci.yml
examples/: conversations.html  example-dark-style.css
src/claude_notes/: __init__.py  __main__.py  cli.py  pager.py  parser.py
src/claude_notes/formatters/: __init__.py  animated.py  base.py  factory.py  html.py  terminal.py  tools.py
